Color tokens updated, resume dark mode fixed

--- a/public/03_css/404.css
+++ b/public/03_css/404.css
@@ -7,35 +7,48 @@
   --color-text: #eee;
   --color-text-light: #222;
   --color-text-dark: #eee;
+  --color-text-h2-light: #333;
+  --color-text-h2-dark: #87CEFA;
+  --color-text-h3-light: #555;
+  --color-text-h3-dark: #eee;
+  --color-text-p-light: #666;
+  --color-text-p-dark: #e0e0e0;
   --color-bg-body-light: steelblue;
   --color-bg-body-dark: #121212;
   --color-bg-header-light: #121212;
   --color-bg-header-dark: steelblue;
+  --color-bg-accordion-light: #f9f9f9;
+  --color-bg-accordion-dark: #222;
   --font-primary: "Lato", sans-serif;
   --font-secondary: "Raleway", sans-serif;
   --base-font-size: 16px;
   --min-font-size: 1rem;
   --max-font-size: 2rem;
   --font-scaling-factor: 0.5;
-  /* legacy color tokens */
+  /* Legacy color tokens */
   --legacy-switch-bkg-color: #2b2b2b;
   --legacy-bkg-color: #87CEFA;
   --legacy-switch-bkg-color: hsl(207, 44%, 80%);
   /* ------ Theme Aliases (applied tokens) ------ */
   /* -------------------------------------------- */
   --text-color: var(--color-text);
+  --text-color-h2: var(--color-text-h2-light);
+  --text-color-h3: var(--color-text-h3-light);
+  --text-color-p: var(--color-text-p-light);
   --bkg-color: var(--color-bg-body-light);
   --header-bkg-color: var(--color-bg-header-light);
+  --accordian-bkg-color: var(--color-bg-accordion-light);
 }
 
-/* body.dark-theme is used for manual theme override, toggled by javascript 
-as seen here: document.body.classList.toggle("dark-theme")
-body.dark-theme {--text-color: #eee; --bkg-color: #121212;} */
 @media (prefers-color-scheme: dark) {
-  body {
+  :root {
     --text-color: var(--color-text);
+    --text-color-h2: var(--color-text-h2-dark);
+    --text-color-h3: var(--color-text-h3-dark);
+    --text-color-p: var(--color-text-p-dark);
     --bkg-color: var(--color-bg-body-dark);
     --header-bkg-color: var(--color-bg-header-dark);
+    --accordian-bkg-color: var(--color-bg-accordion-dark);
   }
 }
 /* Break‑points */
