--- a/public/03_css/home.css
+++ b/public/03_css/home.css
@@ -7,32 +7,48 @@
   --color-text: #eee;
   --color-text-light: #222;
   --color-text-dark: #eee;
+  --color-text-h2-light: #333;
+  --color-text-h2-dark: #87CEFA;
+  --color-text-h3-light: #555;
+  --color-text-h3-dark: #eee;
+  --color-text-p-light: #666;
+  --color-text-p-dark: #e0e0e0;
   --color-bg-body-light: steelblue;
   --color-bg-body-dark: #121212;
   --color-bg-header-light: #121212;
   --color-bg-header-dark: steelblue;
+  --color-bg-accordion-light: #f9f9f9;
+  --color-bg-accordion-dark: #222;
   --font-primary: "Lato", sans-serif;
   --font-secondary: "Raleway", sans-serif;
   --base-font-size: 16px;
   --min-font-size: 1rem;
   --max-font-size: 2rem;
   --font-scaling-factor: 0.5;
-  /* legacy color tokens */
+  /* Legacy color tokens */
   --legacy-switch-bkg-color: #2b2b2b;
   --legacy-bkg-color: #87CEFA;
   --legacy-switch-bkg-color: hsl(207, 44%, 80%);
   /* ------ Theme Aliases (applied tokens) ------ */
   /* -------------------------------------------- */
   --text-color: var(--color-text);
+  --text-color-h2: var(--color-text-h2-light);
+  --text-color-h3: var(--color-text-h3-light);
+  --text-color-p: var(--color-text-p-light);
   --bkg-color: var(--color-bg-body-light);
   --header-bkg-color: var(--color-bg-header-light);
+  --accordian-bkg-color: var(--color-bg-accordion-light);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --text-color: var(--color-text);
+    --text-color-h2: var(--color-text-h2-dark);
+    --text-color-h3: var(--color-text-h3-dark);
+    --text-color-p: var(--color-text-p-dark);
     --bkg-color: var(--color-bg-body-dark);
     --header-bkg-color: var(--color-bg-header-dark);
+    --accordian-bkg-color: var(--color-bg-accordion-dark);
   }
 }
 /* Break‑points */
@@ -260,7 +276,7 @@ footer {
   box-sizing: border-box;
   display: none;
   margin: auto;
-  /* margin-top: 1.5em;    */
+  margin-top: 9px;
   aspect-ratio: 1.4;
   width: 90%;
   border: 1px solid #d1d1d1;
@@ -290,6 +306,7 @@ footer {
   left: 25%;
   width: 50%;
   text-align: center;
+  border-radius: 3px;
 }
 
 .projectTag {
@@ -379,8 +396,8 @@ footer {
   padding: 10px 20px;
   width: 100%;
   text-align: left;
-  border: 1px solid var(--bkg-color);
-  border-top: 1px solid white;
+  border: 1.5px solid var(--bkg-color);
+  border-top: 1.5px solid white;
   outline: none;
   cursor: pointer;
   font-size: 2rem;
@@ -410,32 +427,32 @@ footer {
 .resume-section {
   margin-bottom: 30px; /* Spacing between resume sections */
   padding: 20px; /* Internal spacing for each resume section */
-  border: 1px solid #e0e0e0; /* A light border around each section */
+  border: 1.5px solid var(--text-color); /* A light border around each section */
   border-radius: 5px; /* Rounded corners */
-  background-color: #f9f9f9; /* Light background color for each section */
+  background-color: var(--accordian-bkg-color); /* Light background color for each section */
 }
 
 .resume-section h2 {
   font-size: 1.5rem; /* Main resume title size */
   margin-bottom: 10px; /* Spacing after the title */
-  color: #333; /* Dark text color for contrast */
+  color: var(--text-color-h2); /* Dark text color for contrast */
   font-weight: bold; /* Bold text for emphasis */
 }
 
 .resume-section h3 {
   font-size: 1.2rem; /* Sub-title/role size */
   margin-bottom: 5px; /* Spacing after the sub-title */
-  color: #555; /* A slightly lighter shade for sub-titles */
+  color: var(--text-color-h3); /* A slightly lighter shade for sub-titles */
   font-style: italic; /* Italic text for a different look. Can be removed if not desired */
 }
 
 .resume-section p {
   margin-bottom: 15px; /* Spacing after paragraphs (like Date and Location) */
-  color: #666; /* Color for general text */
+  color: var(--text-color-p); /* Color for general text */
 }
 
 .resume-section p strong {
-  color: #444; /* Darker text color for labels like 'Date:' and 'Location:' for emphasis */
+  color: var(--text-color-h3); /* Darker text color for labels like 'Date:' and 'Location:' for emphasis */
 }
 
 .resume-section ul {
@@ -445,7 +462,7 @@ footer {
 
 .resume-section li {
   margin-bottom: 10px; /* Spacing between bullet points */
-  color: #666; /* Text color for bullet points */
+  color: var(--text-color-p); /* Text color for bullet points */
 }
 
 /* Optionally, style for the active button */
