--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -7,10 +7,19 @@
   --color-text:               #eee;
   --color-text-light:         #222;
   --color-text-dark:          #eee;
+  --color-text-h2-light:      #333;
+  --color-text-h2-dark:       #87CEFA;
+  --color-text-h3-light:      #555;
+  --color-text-h3-dark:       #eee;
+  --color-text-p-light:       #666;
+  --color-text-p-dark:        #e0e0e0;
+  // Background colors
   --color-bg-body-light:      steelblue;
   --color-bg-body-dark:       #121212;
   --color-bg-header-light:    #121212;
   --color-bg-header-dark:     steelblue;
+  --color-bg-accordion-light: #f9f9f9;
+  --color-bg-accordion-dark:  #222;
 
   // Font Tokens
   --font-primary:               'Lato',    sans-serif;
@@ -22,17 +31,22 @@
   --max-font-size:              2rem;
   --font-scaling-factor:        0.5;
   
-  /* legacy color tokens */
+  /* Legacy color tokens */
   --legacy-switch-bkg-color:  #2b2b2b;
   --legacy-bkg-color:         #87CEFA;
   --legacy-switch-bkg-color:  hsl(207, 44%, 80%);
 
 /* ------ Theme Aliases (applied tokens) ------ */
 /* -------------------------------------------- */
-  // Color                          
+  // Colors                          
   --text-color:                 var(--color-text);
+  --text-color-h2:              var(--color-text-h2-light);
+  --text-color-h3:              var(--color-text-h3-light);
+  --text-color-p:               var(--color-text-p-light);
+  // Background colors
   --bkg-color:                  var(--color-bg-body-light);
   --header-bkg-color:           var(--color-bg-header-light);
+  --accordian-bkg-color:        var(--color-bg-accordion-light);
 }
 
 // @media (prefers-color-scheme: dark) automatically applies dark mode styles 
@@ -40,9 +54,15 @@
 // However, it does not override variables toggled by javascript. 
 @media (prefers-color-scheme: dark) {
   :root {
+    // Colors
     --text-color:               var(--color-text);
+    --text-color-h2:            var(--color-text-h2-dark);
+    --text-color-h3:            var(--color-text-h3-dark);
+    --text-color-p:             var(--color-text-p-dark);
+    // Background color
     --bkg-color:                var(--color-bg-body-dark);
     --header-bkg-color:         var(--color-bg-header-dark);
+    --accordian-bkg-color:      var(--color-bg-accordion-dark);
   }
 }
 
