--- a/scss/pages/home/_resume.scss
+++ b/scss/pages/home/_resume.scss
@@ -44,8 +44,8 @@
     padding: 10px 20px;
     width: 100%;
     text-align: left;
-    border: 1px solid var(--bkg-color);
-    border-top: 1px solid white;
+    border: 1.5px solid var(--bkg-color);
+    border-top: 1.5px solid white;
     outline: none;
     cursor: pointer;
     font-size: 2rem;
@@ -76,16 +76,16 @@
 .resume-section {
     margin-bottom: 30px;          /* Spacing between resume sections */
     padding: 20px;                /* Internal spacing for each resume section */
-    border: 1px solid #e0e0e0;  /* A light border around each section */
+    border: 1.5px solid var(--text-color);  /* A light border around each section */
     border-radius: 5px;           /* Rounded corners */
-    background-color: #f9f9f9;  /* Light background color for each section */
+    background-color: var(--accordian-bkg-color);  /* Light background color for each section */
   }
   
   // Header for name of resume
   .resume-section h2 {
     font-size: 1.5rem;            /* Main resume title size */
     margin-bottom: 10px;          /* Spacing after the title */
-    color: #333;                /* Dark text color for contrast */
+    color: var(--text-color-h2);                /* Dark text color for contrast */
     font-weight: bold;            /* Bold text for emphasis */
   }
   
@@ -93,19 +93,19 @@
   .resume-section h3 {
     font-size: 1.2rem;    /* Sub-title/role size */
     margin-bottom: 5px;   /* Spacing after the sub-title */
-    color: #555;        /* A slightly lighter shade for sub-titles */
+    color: var(--text-color-h3);        /* A slightly lighter shade for sub-titles */
     font-style: italic;   /* Italic text for a different look. Can be removed if not desired */
   }
   
   // Info after "Date:" or "Location:"
   .resume-section p {
     margin-bottom: 15px;  /* Spacing after paragraphs (like Date and Location) */
-    color: #666;        /* Color for general text */
+    color: var(--text-color-p);        /* Color for general text */
   }
   
   // bold style for "Date:" or "Location"
   .resume-section p strong {
-    color: #444;        /* Darker text color for labels like 'Date:' and 'Location:' for emphasis */
+    color: var(--text-color-h3);        /* Darker text color for labels like 'Date:' and 'Location:' for emphasis */
   }
   
   // Bullet points.
@@ -117,7 +117,7 @@
   // Bullet point descriptions 
   .resume-section li {
     margin-bottom: 10px;    /* Spacing between bullet points */
-    color: #666;          /* Text color for bullet points */
+    color: var(--text-color-p);          /* Text color for bullet points */
   }
   
   /* Optionally, style for the active button */
